# deeprec

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
config/: preprocessing_config.yaml  style_paper.mplstyle
config/ensembles_paper/: train_2-era.yaml  train_3-era-wghm.yaml
config/global-ensemble_alltrain/: train_global_gap_nll.yaml  train_global_nogap_nll.yaml
config/global-ensemble_crossval/: train_global_fold1.yaml  train_global_fold2.yaml  train_global_fold3.yaml  train_global_fold4.yaml  train_global_fold5.yaml
config/model-configs/: train-era-rdcd.yaml  train-era.yaml  train-wghm-era.yaml
config/output-configs/: members-era-rdcd.yaml  members-era.yaml  members-wghm-era.yaml  mixed-era-rdcd.yaml  mixed-era.yaml  mixed-wghm-era.yaml  mixture-era-rdcd.yaml  mixture-era.yaml  mixture-wghm-era.yaml  output-era-rdcd.yaml  output-era.yaml  output-wghm-era.yaml
deeprec/: __init__.py  accessors.py  losses.py  metrics.py  regions.py  training.py  utils.py  visualization.py
deeprec/data/: __init__.py  datamodule.py  dataset.py  xgboost_datamodule.py
deeprec/models/: base.py  rnn.py
deeprec/preprocessing/: __init__.py  decomposers.py  preprocessors.py  scalers.py
deepwaters/: __init__.py  accessors.py  losses.py  lr_scheduler.py  metrics.py  regions.py  utils.py  visualization.py
deepwaters/data/: __init__.py  datamodule.py  dataset.py
deepwaters/models/: base.py  cropresnet.py  rnn.py
deepwaters/preprocessing/: __init__.py  decomposers.py  preprocessors.py
docs/figures/tikz-diagrams/: laplace.tex  laplace_1.tex  laplace_2.tex  laplace_3.tex  laplace_4.tex  laplace_5.tex  mixture.tex
jobs/: predict_model.sh  test_model.sh  train_model.sh
notebooks/1-data-collection/: 1.0-data-download.ipynb
notebooks/10-data-collection/: data-download.ipynb
notebooks/11-data-processing/: slr-processing.ipynb  water-budget-processing.ipynb
notebooks/2-ensemble-merging/: 2.0-ensemble-merging_crossval.ipynb  2.1-ensemble-merging_alltrain_nll.ipynb  2.2-write-results.ipynb
notebooks/20-si-plots/: basins.ipynb  grace-decomposition.ipynb  grace-metrics-trainval.ipynb  inputs.ipynb  sea-level-budget-closure.ipynb  slr-comparison.ipynb  uncertainty-evaluation.ipynb  water-budget-closure-processing.ipynb  water-budget-closure.ipynb
notebooks/21-paper-plots/: basins.ipynb  grace-metrics.ipynb  sea-level-budget-closure.ipynb  slr-comparison.ipynb  uncertainty-evaluation.ipynb  water-budget-closure.ipynb
notebooks/3-paper-plots/: 3.0-metrics-grace-era.ipynb  3.1-water-budget-preprocessing.ipynb  3.2-water-budget-closure.ipynb  3.3-sea-level-budget-closure.ipynb  3.3-uncertainty-evaluation.ipynb
notebooks/4-supplementary-plots/: 4.2-water-budget-closure.ipynb  4.3-sea-level-budget-closure.ipynb  4.4-uncertainty-evaluation.ipynb  4.5-inputs.ipynb  4.6-basins.ipynb
scripts/: 0-download-data.py  1-preprocess-data.py  1-watergap-decomposition.py  2-clean-shapefiles.py  2-preprocess-data.py  3-clean-reconstructions.py  3-clean-shapefiles.py  4-clean-reconstructions.py  4-model-train.py  5-model-test.py  5-model-traintest.py  5.1-model-train.py  5.3-model-test.py  6-model-predict.py  6-model-prediction.py  7-ckpt-download.py  7-mix-ensemble.py  8-write-results-mixed.py  8-write-results-mixture.py  9-write-results-members.py  9-write-results-mixture.py
