[project]
name = "deeprec"
version = "0.2.0"
authors = [
  { name="Luis Quentin Gentner", email="luis.gentner@outlook.com" },
]
description = "Reconstructing Pre-GRACE Terrestrial Water Storage Anomalies Using Deep Learning"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cartopy",
    "cf-xarray",
    "dask",
    "geopandas",
    "isimip-client",
    "lightning",
    "matplotlib",
    "numpy",
    "omegaconf",
    "pandas",
    "pyjanitor",
    "jsonargparse[signatures]>=4.34",
    "regionmask",
    "requests",
    "rich",
    "rioxarray",
    "ruamel-yaml",
    "scikit-learn",
    "statsmodels",
    "shapely",
    "shxarray",
    "tabulate",
    "torch",
    "torchinfo",
    "tqdm",
    "wandb",
    "xarray[complete]",
    "xskillscore",
    "zarr",
]

[project.optional-dependencies]
interactive = ["ipykernel", "matplotlib-inline", "seaborn"]
download = ["podaac-data-subscriber", "cdsapi", "isimip-client"]

[tool.setuptools]
packages = ["deeprec"]
