[project]
name = "deeprec"
version = "0.2.0"
authors = [
  { name="Luis Quentin Gentner", email="luis.gentner@outlook.com" },
]
description = "Reconstructing Pre-GRACE Terrestrial Water Storage Anomalies Using Deep Learning"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cartopy",
    "cf-xarray",
    "dask",
    "geopandas",
    "isimip-client",
    "lightning",
    "matplotlib",
    "numpy",
    "omegaconf",
    "pandas",
    "pyjanitor",
    "jsonargparse[signatures]>=4.34",
    "regionmask",
    "requests",
    "rich",
    "rioxarray",
    "ruamel-yaml",
    "scikit-learn",
    "statsmodels",
    "shapely",
    "tabulate",
    "torch",
    "torchinfo",
    "tqdm",
    "wandb",
    "xarray[complete]",
    "xskillscore",
    "zarr",
    "openpyxl",
]

[project.optional-dependencies]
download = ["podaac-data-subscriber", "cdsapi", "isimip-client"]
plot = ["ipykernel", "matplotlib-inline", "seaborn", "cmcrameri"]
complete = ["deeprec[download, plot]"]

[tool.setuptools]
packages = ["deeprec"]
